--- a/libs/css/own.css
+++ b/libs/css/own.css
@@ -3,36 +3,38 @@ body{
     padding:0;
 }
 
-#mapid{
-    margin:0;
-    padding:0;
-    height:800px;
+#selector{
+    position:absolute;
+    top: 10px;
+    width:50%;
+    z-index:100;
+    margin-left:25%;
+  }
+
+#country{
     width:100%;
 }
 
-ul.search{
-    width:auto;
-    margin-left:auto;
-    margin-right:auto;
-    padding-left:0;
-}
 
-ul.search>li{
-    list-style-type: none;
-    width:auto;
-    
-}
-
-ul.search>li:hover{
-    background-color: cornflowerblue;
+#mapid{
+    margin:0;
+    padding:0;
+    height:900px;
+    width:100%;
+    z-index:1;
 }
 
 ul{
-    margin-left:0;
-    padding-left:0;
     list-style-type: none;
 }
 
+
 .row,.row>div{
     margin-top:15px;
+}
+
+#result{
+    position:absolute;
+    top:25%;
+    z-index:101;
 }
