--- a/libs/css/own.css
+++ b/libs/css/own.css
@@ -19,7 +19,7 @@ body{
 #mapid{
     margin:0;
     padding:0;
-    height:900px;
+    height:100vh;
     width:100%;
     z-index:1;
 }
@@ -35,6 +35,6 @@ ul{
 
 #result{
     position:absolute;
-    top:25%;
+    top:3%;
     z-index:101;
 }
